--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
                 console.error('Processing sketch not initialized.');
             }
         }
+    }
+  </script>
+
+<script>
+            
 // Function to continuously update the current location and direction
 function getCurrentLocation() {
     if (navigator.geolocation) {
@@ -252,6 +257,7 @@ getCurrentLocation();
             return d;
         }
         </script>
+        
         <script type="text/javascript">
             // Processing 4 sketch
             let numPotentiometers = 8;
