--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             margin-bottom: 20px;
             position: relative;
         }
-        #closestShop, #currentLocation, #gestureDiv {
+        #closestShop, #currentLocation, #gestureDiv, #headingChange {
             width: 100%;
             text-align: center;
         }
