--- a/index.html
+++ b/index.html
@@ -136,43 +136,46 @@
 		<script>
 			// Script to continuously update the current location and direction
 			// Script to continuously update the current location and direction
-			function getCurrentLocation() {
-				if (navigator.geolocation) {
-					const options = {
-						enableHighAccuracy: true,
-					};
-					let previousPositions = []; // Array to store the last three positions
-					let threshold = 5; // Threshold for considering device movement (in degrees)
-					navigator.geolocation.watchPosition(
-						function (position) {
-							// Calculate direction if previous positions are available
-							if (previousPositions.length >= 3) {
-								let averageDirection = calculateAverageDirection(previousPositions);
-								// Determine direction text based on average direction
-								let directionText;
-								if (averageDirection !== 0) {
-									directionText = determineDirection(averageDirection);
-								} else {
-									directionText = "Not moving"; // If no significant change in direction
-								}
-								// Update the HTML element with the direction
-								document.getElementById("currentLocation").textContent = directionText + " (Average Direction: " + averageDirection + ")";
-							}
-							// Update previous positions array
-							previousPositions.push(position);
-							if (previousPositions.length > 3) {
-								previousPositions.shift(); // Remove the oldest position if array length exceeds 3
-							}
-						},
-						function (error) {
-							console.error("Error getting current location: ", error);
-						},
-						options,
-					);
-				} else {
-					console.error("Geolocation is not supported by this browser.");
-				}
-			}
+function getCurrentLocation() {
+    if (navigator.geolocation) {
+        const options = {
+            enableHighAccuracy: true,
+        };
+        let previousPositions = []; // Array to store the last three positions
+        let threshold = 10; // Threshold for considering device movement (in degrees), reduced for walking
+        navigator.geolocation.watchPosition(
+            function (position) {
+                // Update previous positions array
+                previousPositions.push(position);
+                if (previousPositions.length > 3) {
+                    previousPositions.shift(); // Remove the oldest position if array length exceeds 3
+                }
+
+                // Calculate direction if enough previous positions are available
+                if (previousPositions.length >= 3) {
+                    let averageDirection = calculateAverageDirection(previousPositions);
+                    // Determine direction text based on average direction
+                    let directionText;
+                    if (Math.abs(averageDirection) >= threshold) {
+                        directionText = determineDirection(averageDirection);
+                    } else {
+                        directionText = "Not moving"; // If no significant change in direction
+                    }
+                    // Update the HTML element with the direction
+                    document.getElementById("currentLocation").textContent = directionText + " (Average Direction: " + averageDirection + ")";
+                }
+            },
+            function (error) {
+                console.error("Error getting current location: ", error);
+            },
+            options,
+        );
+    } else {
+        console.error("Geolocation is not supported by this browser.");
+    }
+}
+// Function to calculate the average direction based on the last three positions
+
 			// Function to calculate the average direction based on the last three positions
 			function calculateAverageDirection(positions) {
 				let totalChange = 0;
