--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
 		<script>
 			// Script to continuously update the current location and direction
 	function getCurrentLocation() {
+function getCurrentLocation() {
     if (navigator.geolocation) {
         const options = {
             enableHighAccuracy: true,
