--- a/index.html
+++ b/index.html
@@ -134,97 +134,108 @@
 		</script>
 
 		<script>
-function getCurrentLocation() {
-    if (navigator.geolocation) {
-        const options = {
-            enableHighAccuracy: true,
-        };
+			function getCurrentLocation() {
+				if (navigator.geolocation) {
+					const options = {
+						enableHighAccuracy: true,
+					};
 
-        let previousPosition = null;
-        let totalDistance = 0;
+					let previousPosition = null;
+					let totalDistance = 0;
 
-        navigator.geolocation.watchPosition(
-            function (position) {
-                const speedThreshold = 0.5; // Threshold for considering the user as significantly moving (in meters per second)
-                let speed = position.coords.speed || 0; // Speed in meters per second
+					navigator.geolocation.watchPosition(
+						function (position) {
+							const speedThreshold = 0.5; // Threshold for considering the user as significantly moving (in meters per second)
+							let speed = position.coords.speed || 0; // Speed in meters per second
 
-                // Reset total distance if speed is less than threshold
-                if (speed < speedThreshold) {
-                    totalDistance = 0;
-                } else if (previousPosition) {
-                    const distance = calculateDistance(previousPosition.coords.latitude, previousPosition.coords.longitude, position.coords.latitude, position.coords.longitude);
-                    totalDistance += distance;
-                }
+							// Reset total distance if speed is less than threshold
+							if (speed < speedThreshold) {
+								totalDistance = 0;
+							} else if (previousPosition) {
+								const distance = calculateDistance(
+									previousPosition.coords.latitude,
+									previousPosition.coords.longitude,
+									position.coords.latitude,
+									position.coords.longitude,
+								);
+								totalDistance += distance;
+							}
 
-                previousPosition = position;
+							previousPosition = position;
 
-                const headingThreshold = 10; // Threshold for considering a stable heading (in degrees)
-                let heading = position.coords.heading || 0; // Heading in degrees
+							const headingThreshold = 10; // Threshold for considering a stable heading (in degrees)
+							let heading = position.coords.heading || 0; // Heading in degrees
 
-                // Determine direction text based on heading
-                let directionText;
-                if (speed >= speedThreshold) {
-                    directionText = determineDirection(heading);
-                } else {
-                    directionText = "Not moving";
-                }
+							// Determine direction text based on heading
+							let directionText;
+							if (speed >= speedThreshold) {
+								directionText = determineDirection(heading);
+							} else {
+								directionText = "Not moving";
+							}
 
-                // Update the HTML element with the direction and distance walked
-                document.getElementById("currentLocation").textContent = "Direction: " + directionText + ", Speed: " + speed.toFixed(2) + " m/s, Total Distance Walked: " + totalDistance.toFixed(2) + " meters";
-            },
-            function (error) {
-                console.error("Error getting current location: ", error);
-            },
-            options,
-        );
-    } else {
-        console.error("Geolocation is not supported by this browser.");
-    }
-}
+							// Update the HTML element with the direction and distance walked
+							document.getElementById("currentLocation").textContent =
+								"Direction: " +
+								directionText +
+								", Speed: " +
+								speed.toFixed(2) +
+								" m/s, Total Distance Walked: " +
+								totalDistance.toFixed(2) +
+								" meters";
+						},
+						function (error) {
+							console.error("Error getting current location: ", error);
+						},
+						options,
+					);
+				} else {
+					console.error("Geolocation is not supported by this browser.");
+				}
+			}
 
-// Function to calculate the distance between two coordinates using Haversine formula
-function calculateDistance(lat1, lon1, lat2, lon2) {
-    const earthRadius = 6371e3; // Earth radius in meters
-    const phi1 = lat1 * Math.PI / 180; // Latitude in radians
-    const phi2 = lat2 * Math.PI / 180; // Latitude in radians
-    const deltaPhi = (lat2 - lat1) * Math.PI / 180;
-    const deltaLambda = (lon2 - lon1) * Math.PI / 180;
+			// Function to calculate the distance between two coordinates using Haversine formula
+			function calculateDistance(lat1, lon1, lat2, lon2) {
+				const earthRadius = 6371e3; // Earth radius in meters
+				const phi1 = (lat1 * Math.PI) / 180; // Latitude in radians
+				const phi2 = (lat2 * Math.PI) / 180; // Latitude in radians
+				const deltaPhi = ((lat2 - lat1) * Math.PI) / 180;
+				const deltaLambda = ((lon2 - lon1) * Math.PI) / 180;
 
-    const a = Math.sin(deltaPhi / 2) * Math.sin(deltaPhi / 2) +
-        Math.cos(phi1) * Math.cos(phi2) *
-        Math.sin(deltaLambda / 2) * Math.sin(deltaLambda / 2);
-    const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+				const a =
+					Math.sin(deltaPhi / 2) * Math.sin(deltaPhi / 2) +
+					Math.cos(phi1) * Math.cos(phi2) * Math.sin(deltaLambda / 2) * Math.sin(deltaLambda / 2);
+				const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
 
-    const distance = earthRadius * c; // Distance in meters
-    return distance;
-}
+				const distance = earthRadius * c; // Distance in meters
+				return distance;
+			}
 
-// Function to determine the direction text based on the heading
-function determineDirection(heading) {
-    let directionText;
-    if (heading >= 337.5 || heading < 22.5) {
-        directionText = "Heading North";
-    } else if (heading >= 22.5 && heading < 67.5) {
-        directionText = "Heading Northeast";
-    } else if (heading >= 67.5 && heading < 112.5) {
-        directionText = "Heading East";
-    } else if (heading >= 112.5 && heading < 157.5) {
-        directionText = "Heading Southeast";
-    } else if (heading >= 157.5 && heading < 202.5) {
-        directionText = "Heading South";
-    } else if (heading >= 202.5 && heading < 247.5) {
-        directionText = "Heading Southwest";
-    } else if (heading >= 247.5 && heading < 292.5) {
-        directionText = "Heading West";
-    } else if (heading >= 292.5 && heading < 337.5) {
-        directionText = "Heading Northwest";
-    }
-    return directionText;
-}
+			// Function to determine the direction text based on the heading
+			function determineDirection(heading) {
+				let directionText;
+				if (heading >= 337.5 || heading < 22.5) {
+					directionText = "Heading North";
+				} else if (heading >= 22.5 && heading < 67.5) {
+					directionText = "Heading Northeast";
+				} else if (heading >= 67.5 && heading < 112.5) {
+					directionText = "Heading East";
+				} else if (heading >= 112.5 && heading < 157.5) {
+					directionText = "Heading Southeast";
+				} else if (heading >= 157.5 && heading < 202.5) {
+					directionText = "Heading South";
+				} else if (heading >= 202.5 && heading < 247.5) {
+					directionText = "Heading Southwest";
+				} else if (heading >= 247.5 && heading < 292.5) {
+					directionText = "Heading West";
+				} else if (heading >= 292.5 && heading < 337.5) {
+					directionText = "Heading Northwest";
+				}
+				return directionText;
+			}
 
 			getCurrentLocation();
 
-			
 			async function findClosestShop() {
 				if (navigator.geolocation) {
 					navigator.geolocation.getCurrentPosition(async function (position) {
