Testing Visual Code

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 			}
 
 			function setupColors() {
-				lineColors[0] = color(204, 204, 0); // Dark Yellow
+				lineColors[0] = color(204, 204, 0); // Dark Yellow edited from VIsual Code
 				lineColors[1] = color(204, 204, 0); // Dark Yellow
 				lineColors[2] = color(255, 0, 0); // Red
 				lineColors[3] = color(204, 204, 0); // Dark Yellow
