--- a/index.html
+++ b/index.html
@@ -561,12 +561,14 @@
 				// Set a timeout to clear the text after 3 seconds if there's no change
 				timeoutID = setTimeout(function () {
 					gestureDiv.textContent = ""; // Clear the text
+					gestureDiv.style.display = "none"; // Hide the overlay after clearing the text
 				}, 2000);
+
+				// Check if message is not empty to show the overlay
 				if (message.trim() !== "") {
-					gestureDiv.textContent = message;
 					gestureDiv.style.display = "block";
 				} else {
-					gestureDiv.style.display = "none";
+					gestureDiv.style.display = "none"; // Hide the overlay if the message is empty
 				}
 			}
 
