console.log("Overlay visibility:", gestureDiv.style.display);

--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@
 				timeoutID = setTimeout(function () {
 					gestureDiv.textContent = ""; // Clear the text
 					gestureDiv.style.display = "none"; // Hide the overlay after clearing the text
+					console.log("Overlay visibility:", gestureDiv.style.display);
 				}, 2000);
 
 				// Check if message is not empty to show the overlay
